<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:id="@+id/view_pager_layout_6"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hair_analysis_6a"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_marginStart="10dp"
            android:id="@+id/analysis_group_6A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/analysis_rb_6a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6A1"
                android:text="@string/hair_analysis_6a1" />

            <RadioButton
                android:id="@+id/analysis_rb_6a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6A2"
                android:text="@string/hair_analysis_6a2" />

            <RadioButton
                android:id="@+id/analysis_rb_6a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6A3"
                android:text="@string/hair_analysis_6a3" />

            <RadioButton
                android:id="@+id/analysis_rb_6a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="6A4"
                android:text="@string/hair_analysis_6a4" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/analysis_back_btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/forward_button_shape"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/analysis_forward_btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/forward_button_shape"
        android:text="@string/forward"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>